feat: Implement core appointment and customer management features including domain models, services, repositories, and REST APIs.